--- a/shoe_store/src/App.css
+++ b/shoe_store/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.mainPage {
+	position: relative;
+	text-align: center;
+	color: white;
+	width: 100%;
+	height: 85%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.centered {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
+.items {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	margin: 3px;
 }
