--- a/shoe_store/src/App.css
+++ b/shoe_store/src/App.css
@@ -1,9 +1,14 @@
+a {
+	text-decoration: none !important;
+	color: black !important;
+	font-size: 20px !important;
+}
 .mainPage {
 	position: relative;
 	text-align: center;
 	color: white;
 	width: 100%;
-	height: 85%;
+	height: 100%;
 }
 .centered {
 	position: absolute;
@@ -17,4 +22,12 @@
 	justify-content: center;
 
 	margin: 3px;
+}
+h5 {
+	text-decoration: none;
+}
+
+.card:hover {
+	box-shadow: 0 0 3px cadetblue;
+	cursor: pointer;
 }
